[gd_scene load_steps=2 format=2]

[ext_resource path="res://autoload/LogText.gd" type="Script" id=1]

[node name="LogText" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_bottom = 1.0
margin_right = 157.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 98.0
margin_right = 145.0
margin_bottom = -6.0

[node name="clear" type="Button" parent="Panel"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 51.0
margin_right = -13.0
margin_bottom = 89.0
text = "CLEAR"

[node name="cmd" type="LineEdit" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0

[node name="toggle" type="Button" parent="."]
margin_left = 8.0
margin_top = 10.0
margin_right = 146.0
margin_bottom = 46.0
text = "SHOW LOG"

[connection signal="pressed" from="Panel/clear" to="." method="_on_clear_pressed"]
[connection signal="text_entered" from="Panel/cmd" to="." method="_on_cmd_text_entered"]
[connection signal="pressed" from="toggle" to="." method="_on_toggle_pressed"]
